# rti-api-rs

./: .gitignore  Cargo.toml  README.md  build.rs  plan.md
.cursor/rules/: general.mdc
examples/: .env.blank  connect.rs  connector_usage.rs  full_usage.rs  load_historical_bars.rs  load_historical_ticks.rs  market_data.rs  simple-subscribe.rs  simple_market_data.rs
rapi/0.81.0.0/: Release.Notes
rapi/0.81.0.0/proto/: change_log
rapi/0.81.0.0/samples/samples.py/: SampleBar.py  SampleMD.py  SampleOrder.py  exchange_order_notification_pb2.py  request_new_order_pb2.py  rithmic_order_notification_pb2.py
src/: api.rs  client.rs  connection_info.rs  lib.rs  plants.rs  rti.rs  types.rs  ws.rs
src/api/: decoder.rs  mod.rs  receiver_api.rs  sender_api.rs
src/client/: agreements.rs  history.rs  market_data.rs  mod.rs  order_management.rs  pnl.rs
src/plants/: history_plant.rs  order_plant.rs  pnl_plant.rs  shared_plant.rs  ticker_plant.rs  worker.rs
src/proto/: Reference_Guide.txt  change_log  otps_proto_pool.proto  request_bracket_order.proto  user_account_update.proto
src/rti/: messages.rs
tests/: compliance.rs  decoder_tests.rs  integration_test.rs  receiver_api_tests.rs  unit_tests.rs
