[package]
name = "rithmic-rs"
version = "0.4.2"
description = "Rust client for the Rithmic R | Protocol API to build algo trading systems"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/pbeets/rithmic-rs"
documentation = "https://docs.rs/rithmic-rs"
readme = "README.md"
keywords = ["trading", "rithmic", "algotrading", "algorithmic-trading", "automated-trading"]
categories = ["api-bindings", "finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
dotenv = "0.15.0"
futures-util = "0.3.31"
prost = "0.13.5"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
base64 = "0.22.1"
bytes = "1.10.1"
http = "1.1.0"
anyhow = "1.0.89"
hyper-util = { version = "0.1.10", features = ["tokio"] }
hyper = { version = "1.6.0", features = ["client", "http1"] }
http-body-util = "0.1.3"

[build-dependencies]
prost-build = "0.13.5"
