[package]
name = "rithmic-rs"
version = "0.4.2"
description = "Rust client for the Rithmic R | Protocol API to build algo trading systems"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/pbeets/rithmic-rs"
documentation = "https://docs.rs/rithmic-rs"
readme = "README.md"
keywords = ["trading", "rithmic", "algotrading", "algorithmic-trading", "automated-trading"]
categories = ["api-bindings", "finance"]

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.11"
futures-util = "0.3.31"
prost = "0.13.5"
prost-types = "0.13.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bytes = "1.10.1"
anyhow = "1.0.89"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
url = "2.5.2"
dotenv = "0.15.0"
dashmap = "6.0.1"
base64 = "0.22.1"

[build-dependencies]
prost-build = "0.13.5"
