[package]
name = "rti-api-rs"
version = "0.1.0"
description = "Rust client for the Rithmic R | Protocol API to build algo trading systems"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/pcortellezzi/rti-api-rs"
readme = "README.md"
keywords = ["trading", "rithmic", "algotrading", "algorithmic-trading", "automated-trading"]
categories = ["api-bindings", "finance"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
futures-util = "0.3.31"
prost = "0.13.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
bytes = "1.10.1"
eyre = "0.6.12"
url = "2.5.2"
dotenv = "0.15.0"
dashmap = "6.1.0"
base64 = "0.22.1"

[build-dependencies]
prost-build = "0.13.5"

[dev-dependencies]
regex = "1.12.2"
